--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,7 @@ header{
     text-transform: uppercase;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 800;
-    color: #000;
+    color: #fff;
     text-decoration-line: underline;
 }
 
@@ -293,15 +293,17 @@ header{
 }
 
 .contact-btn {
-    background: #042f36;
-    color: #fff;
+    background: #fff;
+    color: #000;
     cursor: pointer;
     width: 80%;
     border: transparent;
+    outline: none;
 }
 
 .contact-btn:hover{
     background: #077788;
+    color: #fff;
 }
 
 footer {
