--- a/css/style.css
+++ b/css/style.css
@@ -140,8 +140,8 @@ header{
 }
 
 .sec-1 {
-    /* background-image: url(/img/bg-3.jpg); */
-    background-color: rgb(36, 29, 29);
+    background-image: url(/img/bg-3.jpg);
+    /* background-color: rgb(36, 29, 29); */
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
