--- a/css/style.css
+++ b/css/style.css
@@ -243,6 +243,43 @@ header{
     margin: 10px;
     background-color: #af6e19;
 }
+
+.sec-resume {
+    background-color: darkgray;
+    height: max-content ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 4rem 2rem;
+}
+
+.resume-card {
+    border-radius: 50px;
+    background-color: #077788;
+    text-align: center;
+    padding: 2rem 1rem;
+}
+
+.resume-card h2{
+    text-transform: uppercase;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+}
+
+.resume-card p{
+    color: #fff;
+    padding: 2rem 1rem;
+    font-weight: 400;
+    line-height: 1.5rem;
+}
+
+.resume-card a{
+    text-decoration: none;
+    font-family: sans-serif;
+    font-weight: bold;
+}
+
+
 .sec-contact{
     background-color: rgb(78, 72, 72);
     /* background-color: #ecdbdb; */
