--- a/css/style.css
+++ b/css/style.css
@@ -246,39 +246,85 @@ header{
 
 .sec-resume {
     background-color: darkgray;
-    height: max-content ;
+    height: max-content;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 4rem 2rem;
+    padding: 2rem 3rem;
 }
 
-.resume-card {
-    border-radius: 50px;
-    background-color: #077788;
-    text-align: center;
-    padding: 2rem 1rem;
-    box-shadow: 2px 4px 1px #0002;
+.card-resume {
+    border-radius: 15px;
+    width: 320px;
+    height: max-content;
+    background: linear-gradient(rgba(28, 12, 172, 0.699) ,rgba(0, 0, 0, 0.664) 70%);
+    box-shadow: 0 0 3rem #000;
+    overflow-y: hidden;
 }
 
-.resume-card h2{
-    text-transform: uppercase;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 700;
-}
-
-.resume-card p{
-    color: #fff;
-    padding: 2rem 1rem;
-    font-weight: 400;
-    line-height: 1.5rem;
-}
-
-.resume-card a{
-    text-decoration: none;
+.card-resume-tittle {
+    position: relative;
+    font-size: 28px;
     font-family: sans-serif;
-    font-weight: bold;
+    text-align: center;
+    padding: 1rem 0;
 }
+
+.card-resume-body {
+    position: relative;
+    display: none;
+    transition-delay: 1s;
+}
+
+.card-resume-tittle::before {
+    content: "";
+    position: absolute;
+    height: 4px;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    background-color: #fff;
+    transform: scaleX(0);
+    transition: 1s ease-in-out;
+    transform-origin: left;
+}
+
+.card-resume-content {
+    text-align: center;
+    word-break: keep-all;
+    font-size: 20px;
+    text-transform: capitalize;
+    padding: 1rem 2rem 1.5rem 2rem;
+}
+
+.card-resume-btn{
+    position: relative;
+    display: block;
+    text-decoration: none;
+    font-weight: bold;
+    text-transform: capitalize;
+    border-radius: 10px;
+    width: 70%;
+    text-align: center;
+    margin: 0 15%;
+    background-color: #1e292b;
+    padding: .5rem 2rem;
+    transition: .5s ease;
+}
+
+.card-resume:hover .card-resume-tittle::before {
+    transform: scaleX(1);
+}
+
+.card-resume:hover .card-resume-body{
+    display: block;
+    padding-bottom: 1.5rem;
+}
+
+.card-resume-btn:hover {
+    background-color: #12181a;
+}
+
 
 
 .sec-contact{
