--- a/css/style.css
+++ b/css/style.css
@@ -189,12 +189,11 @@ header{
     background: transparent;
     border-color: white;
     color: #fff;
+    transition: .5s ease-in-out;
 }
 
 .btn-light:hover{
-    background: #000;
-    border-color: #000;
-    color: #fff;
+    transform: scale(1.1);
 }
 
 .sec-2{
@@ -208,18 +207,39 @@ header{
     padding-bottom: 4rem;
 }
 .sec-2-head {
-    padding: 4rem 3rem;
+    padding: 1rem 2rem;
 }
 
-.sec-2 h2{
+.about-content {
+    margin: 1rem 1.5rem;
+    text-align: center;
+}
+
+.box-tittle {
+    text-transform: uppercase;
     display: block;
     font-size: 26px;
     text-align: center;
     text-shadow: 0 2px 5px #fff4;
 }
 
-.sec-2 p{
-    margin-top: 2rem;
+.box-card {
+    border-radius: 15px;
+    width: 280px;
+    height: max-content;
+    background: linear-gradient(rgba(236, 95, 0, 0.699) ,rgba(0, 0, 0, 0.664) 70%);
+    box-shadow: 0 0 3rem #000;
+    padding: 1rem 2rem;
+    margin: 10px;
+    transition: .5s ease-in-out;
+}
+
+.box-card:hover {
+    transform: scale(1.08);
+}
+.box-content{
+    margin-top: 1rem;
+    padding-top: 1rem;
     display: block;
     font-size: 18px;
     text-align: center;
@@ -228,20 +248,21 @@ header{
 }
 
 
-.box-card {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid #fff3;
-    padding: 5px 8px;
-    border-radius: 30px;
-    box-shadow: 2px 2px 0 1px #fff;
-    word-break: keep-all;
-    width: 280px;
-    height: 280px;
-    margin: 10px;
-    background-color: #af6e19;
+
+.box-body {
+    position: relative;
+}
+
+.box-content::before {
+    content: "";
+    position: absolute;
+    height: 4px;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-color: #fff;
+    transition: .5s ease-in-out;
+    transform-origin: left;
 }
 
 .sec-resume {
@@ -335,7 +356,6 @@ header{
 
 .sec-contact h1{
     text-align: center;
-    margin-bottom: 1rem;
     text-transform: uppercase;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 800;
@@ -358,7 +378,7 @@ header{
 
 .input {
     padding: 10px 20px;
-    width: 80%;
+    width: 280px;
     background-color: #cfc8c8;
     color: #000;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -381,7 +401,7 @@ header{
     background: #fff;
     color: #000;
     cursor: pointer;
-    width: 80%;
+    width: 280px;
     border: transparent;
     outline: none;
 }
